# FAIRWork-Genetic-Algorithm-Allocation

./: README.md  genetic_algorithm.py  pyproject.toml  read_data.py  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini  validation.py  worker_main.py
src/: dummy_data.py  genetic_algorithm.py  main.py  read_data.py  validation.py  worker_main.py
src/allocation/: dummy_data.py  genetic_algorithm.py  main.py  read_data.py  validation.py
tests/: test_gen.py
